--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
         if(response.status == 404){
             document.querySelector(".error").style.display = "block";
-            document.querySelector(".weather").style.display = "block";
+            document.querySelector(".weather").style.display = "none";
         }else{
 
         var data = await response.json();
